--- a/Project 3/eucities_temps.ipynb
+++ b/Project 3/eucities_temps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "['Poland', 'Romania']\n"
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#Part 1.2\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m modified_df \u001b[39m=\u001b[39m df[(df[\u001b[39m'\u001b[39m\u001b[39mlatitude\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mbetween(\u001b[39m40\u001b[39m,\u001b[39m60\u001b[39m)) \u001b[39mand\u001b[39;00m (df[\u001b[39m'\u001b[39m\u001b[39mlongitude\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mbetween(\u001b[39m15\u001b[39m,\u001b[39m30\u001b[39m))]\n\u001b[1;32m      3\u001b[0m countries \u001b[39m=\u001b[39m modified_df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mcountry\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mcount()\n\u001b[1;32m      4\u001b[0m maxCount \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/generic.py:1527\u001b[0m, in \u001b[0;36mNDFrame.__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1525\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[1;32m   1526\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__nonzero__\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m NoReturn:\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1528\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe truth value of a \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m is ambiguous. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1529\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUse a.empty, a.bool(), a.item(), a.any() or a.all().\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1530\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
      ]
     }
    ],
@@ -70,9 +74,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          city         country  population   EU coastline  latitude  \\\n",
+      "0      Elbasan         Albania        2.90   no       yes     41.12   \n",
+      "1      Andorra         Andorra        0.07   no        no     42.50   \n",
+      "2    Innsbruck         Austria        8.57  yes        no     47.85   \n",
+      "3         Graz         Austria        8.57  yes        no     47.08   \n",
+      "4         Linz         Austria        8.57  yes        no     48.32   \n",
+      "..         ...             ...         ...  ...       ...       ...   \n",
+      "208  Edinburgh  United Kingdom       65.11  yes       yes     55.95   \n",
+      "209     Exeter  United Kingdom       65.11  yes       yes     50.70   \n",
+      "210  Inverness  United Kingdom       65.11  yes       yes     53.55   \n",
+      "211    Glasgow  United Kingdom       65.11  yes       yes     55.87   \n",
+      "212    Swansea  United Kingdom       65.11  yes       yes     51.63   \n",
+      "\n",
+      "     longitude  temperature  \n",
+      "0        20.08        15.18  \n",
+      "1         1.52         7.48  \n",
+      "2        11.41         4.54  \n",
+      "3        14.02         6.91  \n",
+      "4        14.29         6.79  \n",
+      "..         ...          ...  \n",
+      "208      -2.94        10.31  \n",
+      "209      -3.53        10.14  \n",
+      "210      -4.23         8.00  \n",
+      "211      -4.25         8.60  \n",
+      "212      -3.95         9.73  \n",
+      "\n",
+      "[213 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#Part 1.3\n",
     "\n",
@@ -96,6 +134,8 @@
     "             df.at[ind, 'temperature'] = noEUAvgTemp\n",
     "        else:\n",
     "             df.at[ind, 'temperature'] = noCoastlineAvgTemp\n",
+    "\n",
+    "print(df)\n",
     "\n",
     "\n",
     "\n"
@@ -186,7 +226,8 @@
     "\n",
     "countries2 = df.groupby('country')\n",
     "modified_countries2 = countries2.apply(lambda x: x['longitude'].unique())\n",
-    "print(modified_countries2.head())"
+    "print(modified_countries2.head())\n",
+    "\n"
    ]
   }
  ],
