Finished part 3 for real

--- a/Project 3/googlePlay.ipynb
+++ b/Project 3/googlePlay.ipynb
@@ -72,13 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Part 3.3\n",
+    "Part 3.3\n",
     "\n",
-    "#import re\n",
+    "import re\n",
     "\n",
-    "#print(df['Android Ver'])\n",
-    "#df['Android Ver'] = df['Android Ver'].str.extract('(\\d+)', expand= False)\n",
-    "#print(df['Android Ver'])"
+    "print(df['Android Ver'])\n",
+    "df['Android Ver'] = df['Android Ver'].str.extract('(\\d+)', expand= False)\n",
+    "print(df['Android Ver'])"
    ]
   },
   {
