--- a/Project 3/germanCredit.ipynb
+++ b/Project 3/germanCredit.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "#Part 2.1\n",
+    "# Part 2\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np \n",
@@ -28,7 +28,6 @@
     "\n",
     "\n",
     "# 1.1\n",
-    "\n",
     "# for col in df.items():\n",
     "#     print(col)\n",
     "# length_df = len(df)\n",
@@ -38,7 +37,6 @@
     "# df.applymap(lambda x: np.round(np.cumsum(x),2))\n",
     "\n",
     "# 1.2\n",
-    "print(df)\n",
     "df.replace('\\'','', regex=True, inplace=True)\n",
     "\n",
     "# 1.3\n",
@@ -55,8 +53,8 @@
     "df['savings_status'] = df['savings_status'].replace('>=1000','High')\n",
     "\n",
     "# 1.5\n",
-    "df['class'] = df['class'].replace('good','1')\n",
-    "df['class'] = df['class'].replace('bad','0')\n",
+    "df['class'] = df['class'].replace('good',1)\n",
+    "df['class'] = df['class'].replace('bad',0)\n",
     "df['employment'] = df['employment'].replace('unemployed','Unemployed')\n",
     "df['employment'] = df['employment'].replace('<1','Amateur')\n",
     "df['employment'] = df['employment'].replace('1<=X<4','Professional')\n",
@@ -64,16 +62,24 @@
     "df['employment'] = df['employment'].replace('>=7','Expert')\n",
     "\n",
     "# 2.1\n",
-    "print(pd.crosstab(df['foreign_worker'],df['class']))\n",
-    "print(pd.crosstab(df['foreign_worker'],df['savings_status']))\n",
+    "print(pd.crosstab(df['foreign_worker'], df['class'].replace([1, 0], ['good', 'bad'])))\n",
+    "print(pd.crosstab(df['employment'],df['savings_status']))\n",
     "\n",
     "# 2.2\n",
-    "# print(df['personal_status'].mean())\n",
+    "print(df[(df['personal_status'] == 'male single') & ((df['employment'] == 'Experienced'))]['credit_amount'].mean())\n",
     "\n",
     "# 2.3\n",
+    "print(df['duration'].groupby(df['job']).mean())\n",
     "\n",
-    "# print('end')\n",
-    "\n"
+    "# 2.4\n",
+    "print('Most common checking status: ' + df[df['purpose'] == 'education']['checking_status'].mode()[0])\n",
+    "print('Most common savings status: ' + df[df['purpose'] == 'education']['savings_status'].mode()[0])\n",
+    "\n",
+    "# 3.1\n",
+    "\n",
+    "# 3.2\n",
+    "\n",
+    "# 3.3"
    ]
   }
  ],
