--- a/Project 3/eucities_temps.ipynb
+++ b/Project 3/eucities_temps.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing 1.1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -15,24 +22,226 @@
       "2       47.85      11.41\n",
       "3       47.08      14.02\n",
       "4       48.32      14.29\n",
-      "..        ...        ...\n",
+      "5       47.81      14.02\n",
+      "6       48.20      16.37\n",
+      "7       52.61      27.57\n",
+      "8       52.61      25.64\n",
+      "9       52.61      25.64\n",
+      "10      52.10      23.70\n",
+      "11      53.68      25.64\n",
+      "12      52.05      25.64\n",
+      "13      51.22       3.23\n",
+      "14      43.85      13.38\n",
+      "15      43.05      26.35\n",
+      "16      42.51      27.47\n",
+      "17      43.42      26.35\n",
+      "18      43.85      25.97\n",
+      "19      42.42      25.62\n",
+      "20      45.33      16.47\n",
+      "21      45.33      14.45\n",
+      "22      49.20      16.61\n",
+      "23      49.83      15.54\n",
+      "24      50.08      14.47\n",
+      "25      55.40       9.92\n",
+      "26      55.40       9.92\n",
+      "27      59.43      26.71\n",
+      "28      59.43      26.71\n",
+      "29      60.18      24.93\n",
+      "30      65.00      23.64\n",
+      "31      61.50      23.75\n",
+      "32      60.45      22.25\n",
+      "33      47.13       3.43\n",
+      "34      47.13       1.25\n",
+      "35      47.13       5.38\n",
+      "36      49.90       2.30\n",
+      "37      47.13       3.43\n",
+      "38      47.48       3.43\n",
+      "39      44.85       3.43\n",
+      "40      48.39      -4.50\n",
+      "41      47.13       3.43\n",
+      "42      49.18       3.43\n",
+      "43      47.33       5.03\n",
+      "44      48.00       3.43\n",
+      "45      50.65       3.08\n",
+      "46      49.12       6.18\n",
+      "47      47.75       7.35\n",
+      "48      43.72       7.27\n",
+      "49      42.70       2.90\n",
+      "50      43.62       1.45\n",
+      "51      50.59       7.08\n",
+      "52      48.35      10.05\n",
+      "53      50.59      11.45\n",
+      "54      52.52      13.40\n",
+      "55      52.03       8.53\n",
+      "56      50.59       8.40\n",
+      "57      53.08       8.80\n",
+      "58      50.83      12.92\n",
+      "59      50.59      11.62\n",
+      "60      50.97      11.03\n",
+      "61      50.10       8.68\n",
+      "62      48.00       7.87\n",
+      "63      49.42       8.70\n",
+      "64      50.59      12.15\n",
+      "65      37.98      23.73\n",
+      "66      37.04      22.11\n",
+      "67      38.23      21.73\n",
+      "68      39.56      21.77\n",
+      "69      47.50      19.80\n",
+      "70      47.53      21.63\n",
+      "71      47.70      17.63\n",
+      "72      46.25      20.15\n",
+      "73      53.30      -8.50\n",
+      "74      53.33      -8.78\n",
+      "75      53.27      -9.05\n",
+      "76      42.08      13.42\n",
+      "77      42.08      14.22\n",
+      "78      42.08      12.48\n",
+      "79      43.60      13.50\n",
+      "80      41.11      16.87\n",
+      "81      45.70       9.67\n",
+      "82      44.50      13.42\n",
+      "83      37.50      15.08\n",
+      "84      39.27      16.29\n",
+      "85      41.46      15.56\n",
+      "86      44.41       8.93\n",
+      "87      38.20      15.55\n",
+      "88      45.47       9.21\n",
+      "89      38.13      13.35\n",
+      "90      45.65      13.80\n",
+      "91      56.95      26.51\n",
+      "92      56.95      26.51\n",
+      "93      55.72      25.32\n",
+      "94      55.72      25.32\n",
+      "95      55.72      25.32\n",
+      "96      42.00      21.43\n",
+      "97      47.76      28.86\n",
+      "98      47.76      28.86\n",
+      "99      42.47      19.27\n",
+      "100     52.35       4.92\n",
+      "101     53.22       6.58\n",
+      "102     52.78       5.68\n",
+      "103     67.25      14.40\n",
+      "104     59.92      10.75\n",
+      "105     58.97       5.68\n",
+      "106     63.42      10.42\n",
+      "107     62.39      10.31\n",
+      "108     53.15      23.17\n",
+      "109     53.12      19.43\n",
+      "110     52.48      19.43\n",
+      "111     52.48      19.40\n",
+      "112     50.89      20.66\n",
+      "113     54.20      19.43\n",
+      "114     52.41      16.90\n",
+      "115     51.11      17.03\n",
+      "116     52.48      19.43\n",
+      "117     38.72      -8.42\n",
+      "118     38.72      -8.42\n",
+      "119     47.75      26.66\n",
+      "120     45.29      27.97\n",
+      "121     44.43      26.10\n",
+      "122     44.33      25.96\n",
+      "123     45.80      24.14\n",
+      "124     45.52      21.32\n",
+      "125     45.52      26.92\n",
+      "126     45.52      25.96\n",
+      "127     45.52      28.61\n",
+      "128     44.82      20.88\n",
+      "129     44.82      21.90\n",
+      "130     44.82      19.85\n",
+      "131     48.15      17.12\n",
+      "132     48.73      17.12\n",
+      "133     46.06      14.51\n",
+      "134     36.13      -4.04\n",
+      "135     38.88      -6.97\n",
+      "136     41.38      -4.04\n",
+      "137     43.25      -2.93\n",
+      "138     37.16      -3.59\n",
+      "139     37.25      -6.93\n",
+      "140     36.52      -4.04\n",
+      "141     43.35      -4.04\n",
+      "142     39.95      -1.87\n",
+      "143     39.95      -3.68\n",
+      "144     40.97      -5.67\n",
+      "145     39.95      -4.04\n",
+      "146     43.38      -3.80\n",
+      "147     39.95      -4.04\n",
+      "148     39.95      -4.04\n",
+      "149     39.49      -4.04\n",
+      "150     41.65      -0.89\n",
+      "151     39.95      -4.04\n",
+      "152     63.35      18.83\n",
+      "153     57.75      12.00\n",
+      "154     67.85      20.22\n",
+      "155     55.58      17.36\n",
+      "156     59.86      17.64\n",
+      "157     60.88      18.10\n",
+      "158     47.58       7.59\n",
+      "159     47.38       8.56\n",
+      "160     47.48       6.14\n",
+      "161     39.17      35.32\n",
+      "162     36.89      30.70\n",
+      "163     39.17      32.86\n",
+      "164     37.89      41.14\n",
+      "165     40.20      29.07\n",
+      "166     37.77      29.08\n",
+      "167     39.17      34.60\n",
+      "168     39.17      38.30\n",
+      "169     41.67      26.57\n",
+      "170     39.17      34.60\n",
+      "171     39.17      39.72\n",
+      "172     39.75      34.60\n",
+      "173     39.92      41.29\n",
+      "174     39.79      30.53\n",
+      "175     37.07      37.38\n",
+      "176     37.18      33.22\n",
+      "177     38.73      35.49\n",
+      "178     38.63      34.60\n",
+      "179     41.00      37.87\n",
+      "180     41.28      34.60\n",
+      "181     37.94      41.93\n",
+      "182     36.92      34.88\n",
+      "183     40.99      27.51\n",
+      "184     41.43      34.60\n",
+      "185     48.71      30.13\n",
+      "186     48.71      25.92\n",
+      "187     48.71      32.24\n",
+      "188     48.71      32.24\n",
+      "189     49.43      32.07\n",
+      "190     51.50      31.30\n",
+      "191     48.30      38.05\n",
+      "192     46.63      32.60\n",
+      "193     48.71      26.25\n",
+      "194     50.43      32.24\n",
+      "195     47.93      33.34\n",
+      "196     48.71      32.24\n",
+      "197     48.03      37.97\n",
+      "198     50.92      34.78\n",
+      "199     45.20      32.24\n",
+      "200     54.60      -5.96\n",
+      "201     53.83      -2.94\n",
+      "202     50.73      -1.90\n",
+      "203     52.20       0.12\n",
+      "204     53.55      -2.08\n",
+      "205     53.55      -1.92\n",
+      "206     53.55      -1.75\n",
+      "207     56.47      -2.94\n",
       "208     55.95      -2.94\n",
       "209     50.70      -3.53\n",
       "210     53.55      -4.23\n",
       "211     55.87      -4.25\n",
-      "212     51.63      -3.95\n",
-      "\n",
-      "[213 rows x 2 columns]\n"
+      "212     51.63      -3.95\n"
      ]
     }
    ],
    "source": [
+    "#Preprocessing\n",
     "#Part 1.1\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "\n",
     "df = pd.read_csv('EuCitiesTemperatures.csv')\n",
     "avgLatitude = df.groupby('country')['latitude'].mean().round(2)\n",
@@ -50,13 +259,19 @@
     "        df.at[ind, 'longitude'] = avgLongitude[df['country'][ind]]\n",
     "\n",
     "\n",
-    "print(df[['latitude', 'longitude']])\n",
-    "\n"
+    "print(df[['latitude', 'longitude']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing 1.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +306,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing 1.3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,13 +326,215 @@
       "2       4.54\n",
       "3       6.91\n",
       "4       6.79\n",
-      "       ...  \n",
+      "5       4.62\n",
+      "6       7.86\n",
+      "7       5.28\n",
+      "8       4.93\n",
+      "9       6.42\n",
+      "10      6.73\n",
+      "11      7.48\n",
+      "12      6.25\n",
+      "13      9.65\n",
+      "14      9.73\n",
+      "15      8.27\n",
+      "16     10.31\n",
+      "17     10.51\n",
+      "18     10.31\n",
+      "19     10.90\n",
+      "20     12.46\n",
+      "21      9.27\n",
+      "22      7.86\n",
+      "23      7.66\n",
+      "24      8.05\n",
+      "25      7.52\n",
+      "26     10.31\n",
+      "27     10.31\n",
+      "28     10.31\n",
+      "29     10.31\n",
+      "30     10.31\n",
+      "31      3.59\n",
+      "32     10.31\n",
+      "33     10.31\n",
+      "34     10.31\n",
+      "35     14.98\n",
+      "36     10.31\n",
+      "37     11.11\n",
+      "38     10.98\n",
+      "39     11.87\n",
+      "40     11.02\n",
+      "41     10.31\n",
+      "42     10.31\n",
+      "43      8.69\n",
+      "44     10.59\n",
+      "45      9.65\n",
+      "46      8.88\n",
+      "47      6.68\n",
+      "48      8.82\n",
+      "49     10.31\n",
+      "50     10.25\n",
+      "51      8.63\n",
+      "52      4.54\n",
+      "53      7.57\n",
+      "54      8.72\n",
+      "55      8.78\n",
+      "56      8.88\n",
+      "57      8.14\n",
+      "58      8.05\n",
+      "59      8.26\n",
+      "60      7.40\n",
+      "61     10.31\n",
+      "62      6.68\n",
+      "63      8.47\n",
+      "64     10.31\n",
+      "65     17.41\n",
+      "66     17.30\n",
+      "67     16.90\n",
+      "68     16.00\n",
+      "69      7.54\n",
+      "70      8.87\n",
+      "71      9.65\n",
+      "72     10.34\n",
+      "73      9.41\n",
+      "74      8.49\n",
+      "75     10.00\n",
+      "76     10.31\n",
+      "77     15.13\n",
+      "78     15.10\n",
+      "79     13.52\n",
+      "80     15.15\n",
+      "81      9.12\n",
+      "82     10.31\n",
+      "83     15.04\n",
+      "84     16.60\n",
+      "85     13.83\n",
+      "86     12.94\n",
+      "87     16.54\n",
+      "88      6.65\n",
+      "89     17.90\n",
+      "90     11.21\n",
+      "91      5.38\n",
+      "92     10.31\n",
+      "93      7.00\n",
+      "94      6.05\n",
+      "95      5.38\n",
+      "96      9.36\n",
+      "97      8.23\n",
+      "98      8.60\n",
+      "99      9.73\n",
+      "100    10.31\n",
+      "101    10.31\n",
+      "102     8.63\n",
+      "103     4.50\n",
+      "104     2.32\n",
+      "105     5.53\n",
+      "106     9.73\n",
+      "107     9.73\n",
+      "108     6.07\n",
+      "109     7.14\n",
+      "110    10.31\n",
+      "111     6.68\n",
+      "112     7.29\n",
+      "113    10.31\n",
+      "114     8.31\n",
+      "115    10.31\n",
+      "116     7.20\n",
+      "117    10.31\n",
+      "118    15.52\n",
+      "119     8.23\n",
+      "120    10.31\n",
+      "121    10.31\n",
+      "122    10.31\n",
+      "123    10.31\n",
+      "124    10.31\n",
+      "125     7.51\n",
+      "126     8.87\n",
+      "127    11.24\n",
+      "128     7.48\n",
+      "129     9.36\n",
+      "130    10.34\n",
+      "131     7.54\n",
+      "132     7.31\n",
+      "133    10.31\n",
+      "134    17.38\n",
+      "135    15.61\n",
+      "136    10.31\n",
+      "137    10.31\n",
+      "138    10.31\n",
+      "139    17.09\n",
+      "140    10.31\n",
+      "141    10.85\n",
+      "142    10.31\n",
+      "143    10.45\n",
+      "144    11.63\n",
+      "145    17.32\n",
+      "146    13.40\n",
+      "147    10.31\n",
+      "148    15.00\n",
+      "149    16.02\n",
+      "150    14.17\n",
+      "151    10.31\n",
+      "152    10.31\n",
+      "153     5.76\n",
+      "154    -2.20\n",
+      "155    10.31\n",
+      "156     4.17\n",
+      "157     6.26\n",
+      "158     6.68\n",
+      "159     6.68\n",
+      "160     8.40\n",
+      "161    18.67\n",
+      "162    11.88\n",
+      "163     9.86\n",
+      "164    14.16\n",
+      "165    11.16\n",
+      "166    15.02\n",
+      "167     9.73\n",
+      "168    14.13\n",
+      "169     9.73\n",
+      "170     8.05\n",
+      "171     9.73\n",
+      "172     9.73\n",
+      "173     5.17\n",
+      "174    11.11\n",
+      "175    13.46\n",
+      "176    10.41\n",
+      "177     8.89\n",
+      "178    15.10\n",
+      "179    11.92\n",
+      "180     9.73\n",
+      "181    12.48\n",
+      "182    11.21\n",
+      "183    13.02\n",
+      "184    10.64\n",
+      "185     6.98\n",
+      "186     7.06\n",
+      "187     7.43\n",
+      "188     7.04\n",
+      "189     7.19\n",
+      "190     9.73\n",
+      "191     7.12\n",
+      "192     8.64\n",
+      "193     6.76\n",
+      "194     6.88\n",
+      "195     9.73\n",
+      "196     6.67\n",
+      "197     8.70\n",
+      "198     6.28\n",
+      "199     9.73\n",
+      "200    10.31\n",
+      "201    10.31\n",
+      "202    10.31\n",
+      "203     9.25\n",
+      "204    10.31\n",
+      "205     8.81\n",
+      "206    10.31\n",
+      "207    10.31\n",
       "208    10.31\n",
       "209    10.14\n",
       "210     8.00\n",
       "211     8.60\n",
       "212     9.73\n",
-      "Name: temperature, Length: 213, dtype: float64\n"
+      "Name: temperature, dtype: float64\n"
      ]
     }
    ],
@@ -142,6 +566,13 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization 1.1"
    ]
   },
   {
@@ -193,6 +624,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization 1.2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -235,6 +673,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization 1.3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -255,6 +700,13 @@
     "plt.xlabel('Unique Population Values')\n",
     "plt.ylabel('Number of Countries for Population Value')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization 1.4"
    ]
   },
   {
@@ -359,7 +811,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -373,12 +825,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
